@@ -48,7 +48,7 @@ EOS
       # at the top of the file next to "default_options"
       # opts.on("-a", "--author=\"Your Name\"", String,
       #         "Some comment about this option",
-      #         "Default: none") { |options[:author]| }
+      #         "Default: none") { |o| options[:author] = o }
       opts.on("-v", "--version", "Show the #{File.basename($0)} version number and quit.")
     end
 
